# gluesql

./: Cargo.toml
pkg/nodejs/: .gitattributes  .yarnrc.yml  Cargo.toml  package.json
pkg/nodejs/src/: lib.rs  payload.rs
test-suite/src/function/: abs.rs  generate_uuid.rs
