
[package]
name = "nodejs"
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["napi8", "serde-json"] }
napi-derive = "3.0.0"
gluesql-core.workspace = true
gluesql_memory_storage.workspace = true
gluesql-web-storage.workspace = true
gluesql-idb-storage.workspace = true
gluesql-composite-storage.workspace = true

serde = "1"
serde_json = "1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[build-dependencies]
napi-build = "2"

[dev-dependencies]
test-suite.workspace = true

async-trait = "0.1"

[profile.release]
lto = true
strip = "symbols"
